--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ foreach(SARD_SOURCE ${SARD_SOURCES})
  file(GLOB SARD_CFILES RELATIVE ${CMAKE_SOURCE_DIR} ${SARD_SOURCE}/*.c)
  list(FILTER SARD_CFILES EXCLUDE REGEX ".*-dfsan\\.c")
  list(FILTER SARD_CFILES EXCLUDE REGEX ".*-taintgrind\\.c")
+ list(FILTER SARD_CFILES EXCLUDE REGEX ".*-frama-c\\.c")
  string(REGEX REPLACE "/" "-" SARD_EXENAME ${SARD_SOURCE})
  add_executable( ${SARD_EXENAME} ${SARD_CFILES} )
  target_link_libraries(${SARD_EXENAME} mysqlclient pam)
@@ -20,6 +21,7 @@ endforeach()
 file(GLOB MISC_CFILES RELATIVE ${CMAKE_SOURCE_DIR} "c/misc/*.c")
 list(FILTER MISC_CFILES EXCLUDE REGEX ".*-dfsan\\.c")
 list(FILTER MISC_CFILES EXCLUDE REGEX ".*-taintgrind\\.c")
+list(FILTER MISC_CFILES EXCLUDE REGEX ".*-frama-c\\.c")
 foreach(MISC_CFILE ${MISC_CFILES})
   string(REGEX REPLACE "/" "-" MISC_EXENAME ${MISC_CFILE})
   add_executable( ${MISC_EXENAME} ${MISC_CFILE} )
