--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ foreach(SARD_SOURCE ${SARD_SOURCES})
  list(FILTER SARD_CFILES EXCLUDE REGEX ".*-dfsan\\.c")
  list(FILTER SARD_CFILES EXCLUDE REGEX ".*-taintgrind\\.c")
  list(FILTER SARD_CFILES EXCLUDE REGEX ".*-frama-c\\.c")
+ list(FILTER SARD_CFILES EXCLUDE REGEX ".*-timecop\\.c")
+ list(FILTER SARD_CFILES EXCLUDE REGEX ".*-ctverif\\.c")
  string(REGEX REPLACE "/" "-" SARD_EXENAME ${SARD_SOURCE})
  add_executable( ${SARD_EXENAME} ${SARD_CFILES} )
  target_link_libraries(${SARD_EXENAME} mysqlclient pam)
@@ -22,6 +24,8 @@ file(GLOB MISC_CFILES RELATIVE ${CMAKE_SOURCE_DIR} "c/misc/*.c")
 list(FILTER MISC_CFILES EXCLUDE REGEX ".*-dfsan\\.c")
 list(FILTER MISC_CFILES EXCLUDE REGEX ".*-taintgrind\\.c")
 list(FILTER MISC_CFILES EXCLUDE REGEX ".*-frama-c\\.c")
+list(FILTER MISC_CFILES EXCLUDE REGEX ".*-timecop\\.c")
+list(FILTER MISC_CFILES EXCLUDE REGEX ".*-ctverif\\.c")
 foreach(MISC_CFILE ${MISC_CFILES})
   string(REGEX REPLACE "/" "-" MISC_EXENAME ${MISC_CFILE})
   add_executable( ${MISC_EXENAME} ${MISC_CFILE} )
