--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "c/misc/heartbleed/openssl"]
 	path = c/misc/heartbleed/openssl
-	url = git://github.com/openssl/openssl.git
+	url = https://github.com/openssl/openssl
