--- a/vm/Makefile
+++ b/vm/Makefile
@@ -31,22 +31,23 @@ run-dfsan:
 run-smack:
 	sudo docker run -v ${HOME}:${HOME} -it smackers/smack
 
+run-framac:
+	sudo docker run -v ${HOME}:${HOME} -it --rm --net=host --env="DISPLAY" -v $HOME/.Xauthority:/root/.Xauthority:ro hugopacheco/framac
+
+run-ikos:
+	sudo docker run -v ${HOME}:${HOME} -p8080:8080 -it hugopacheco/ikos
+
+run-taintgrind:
+	sudo docker run -v ${HOME}:${HOME} -it hugopacheco/taintgrind
+
 run-ctverif:
-	sudo docker build -f ctverif.dockerfile . -t ctverif
-	sudo docker run -v ${HOME}:${HOME} -it ctverif
+	sudo docker run -v ${HOME}:${HOME} -it hugopacheco/ctverif
 
 run-driller:
 	sudo docker run  -v /home/kali:/home/kali -it shellphish/mechaphish
 
 run-fuzzolic:
 	sudo docker run -v /home/kali:/home/kali -u 0 -ti --rm ercoppa/fuzzolic-runner-v1
-
-build-symcc:
-	git clone https://github.com/eurecom-s3/symcc
-	cd symcc && \
-	  git submodule init && \
-		git submodule update && \
-		sudo docker build -t hugopacheco/symcc .
 
 run-symcc:
 	sudo docker run -v /home/kali:/home/kali -it --rm hugopacheco/symcc
@@ -55,16 +56,8 @@ run-klee:
 	sudo docker pull klee/klee:2.1
 	sudo docker run --rm -v ${HOME}:${HOME} -ti --ulimit='stack=-1:-1' klee/klee:2.1
 
-build-klee-taint:
-	git clone https://github.com/hpacheco/klee-taint
-	cd klee-taint && sudo docker build -f Dockerfile . -t hugopacheco/klee-taint
-
 run-klee-taint:
 	sudo docker run -v /home/kali:/home/kali -it hugopacheco/klee-taint
-
-build-klee-taint-ct:
-	git clone https://github.com/hpacheco/klee-taint-ct
-	cd klee-taint-ct && sudo docker build -f Dockerfile . -t hugopacheco/klee-taint-ct
 
 run-klee-taint-ct:
 	sudo docker run -v /home/kali:/home/kali -it hugopacheco/klee-taint-ct
