--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ list(FILTER MISC_CFILES EXCLUDE REGEX ".*-taintgrind\\.c")
 list(FILTER MISC_CFILES EXCLUDE REGEX ".*-frama-c\\.c")
 list(FILTER MISC_CFILES EXCLUDE REGEX ".*-timecop\\.c")
 list(FILTER MISC_CFILES EXCLUDE REGEX ".*-ctverif\\.c")
+list(FILTER MISC_CFILES EXCLUDE REGEX ".*-smack\\.c")
 foreach(MISC_CFILE ${MISC_CFILES})
   string(REGEX REPLACE "/" "-" MISC_EXENAME ${MISC_CFILE})
   add_executable( ${MISC_EXENAME} ${MISC_CFILE} )
