--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ foreach(SARD_SOURCE ${SARD_SOURCES})
  list(FILTER SARD_CFILES EXCLUDE REGEX ".*-frama-c\\.c")
  list(FILTER SARD_CFILES EXCLUDE REGEX ".*-timecop\\.c")
  list(FILTER SARD_CFILES EXCLUDE REGEX ".*-ctverif\\.c")
+ list(FILTER SARD_CFILES EXCLUDE REGEX ".*-smack\\.c")
  string(REGEX REPLACE "/" "-" SARD_EXENAME ${SARD_SOURCE})
  add_executable( ${SARD_EXENAME} ${SARD_CFILES} )
  target_link_libraries(${SARD_EXENAME} mysqlclient pam)
